# wraps

gc-7.6.8/: meson.build  meson_options.txt  upstream.wrap
glfw-3.2.1/: meson.build  meson_options.txt  upstream.wrap
